--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "graphql": "14.5.8",
     "graphql-tag": "^2.10.1",
     "sequelize": "6.6.2",
+    "sequelize-cli": "6.2.0",
     "sqlite3": "5.0.2"
   },
   "license": "MIT",
