--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "apollo-server": "2.9.7",
     "graphql": "14.5.8",
     "graphql-tag": "^2.10.1",
+    "randexp": "0.5.3",
     "sequelize": "6.6.2",
     "sequelize-cli": "6.2.0",
     "sqlite3": "5.0.2"
